<resources>
    <string name="app_name">Go4Lunch</string>

    <string name="twitter_consumer_key" translatable="false">OeoQLBq8dc5ohgjpJUwG0jkdJ</string>
    <string name="twitter_consumer_secret" translatable="false">27SIRgiGaLoznlfxcj2Ylte4McbUDuSR2F8mQveLPDLCoaDKZU</string>

    <string name="detail_title">title</string>
    <string name="detail_type_address">type-address</string>
    <string name="detail_description_validation_button">valid your choice</string>
    <string name="detail_description_call">call</string>
    <string name="detail_description_like">like</string>
    <string name="detail_description_website">website</string>
    <string name="main_login">Login</string>
    <string name="restaurant_cell_name">Name</string>
    <string name="restaurant_cell_type_address">Type-address</string>
    <string name="restaurant_cell_open">Open</string>
    <string name="restaurant_cell_distance">distance</string>
    <string name="restaurant_cell_colleague">Wish:</string>
    <string name="restaurant_cell_description_image">restaurant image</string>
    <string name="restaurant_cell_description_rate">rate</string>
    <string name="detail_colleague_description_image">image of Colleague</string>
    <string name="drawer_lunch">YOUR LUNCH</string>
    <string name="drawer_setting">SETTINGS</string>
    <string name="drawer_logout">LOGOUT</string>
    <string name="drawer_header">Go4Lunch</string>
    <string name="drawer_image_description">User image</string>
    <string name="drawer_user_name">User</string>
    <string name="drawer_user_email">EMail</string>
    <string name="setting_notification_text">Notification</string>
    <string name="setting_explanation">You will receive a notification each day at noon about where you want lunch this day</string>
    <string name="actionbar_search">Search</string>
    <string name="toolbar_map_title">Map View</string>
    <string name="toolbar_list_title">List View</string>
    <string name="colleague_nowhere"> go nowhere for now</string>
    <string name="colleague_somewhere">want go to</string>
    <string name="restaurant_wish">Wish</string>
    <string name="app_nowhere">You go nowhere today</string>
    <string name="app_somewhere">you want go to</string>
    <string name="alarm_title">Your lunch</string>
    <string name="alarm_body">"Today you choose to go: "</string>
    <string name="alarm_unknow">unknown place</string>
    <string name="alarm_nowhere">nowhere</string>
</resources>
